# MachineLearning.Frontend

./: Cargo.toml  Dockerfile  README.md  index.html  style.css
.github/workflows/: cloud.yaml  master-deploy.yaml  pr-dev-deploy.yml
src/: app.rs  main.rs
src/components/: ml_model_details.rs  ml_models_list.rs  mod.rs
src/models/: ml_model.rs  ml_result.rs  mod.rs  parameter.rs
src/services/: api.rs  config.rs
