[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
yew = { version = "0.22.0", features = ["csr", "serde"] }
gloo-net = "0.6"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4"
serde_json = "1.0.149"
web-sys = { version = "0.3.85", features = [
    "HtmlSelectElement",
    "HtmlInputElement",
    "Event",
] }